src/v8/CAPI_Meters.pas


//------------------------------------------------------------------------------
function Meters_Get_CountEndElements():Integer;cdecl;
Var
  pMeterObj :TEnergyMeterObj;
begin
  Result := 0;
  if ActiveCircuit[ActiveActor] <> Nil then begin
    pMeterObj :=  TEnergyMeterObj(ActiveCircuit[ActiveActor].EnergyMeters.Active);
    If pMeterObj <> Nil Then Begin
      Result := pMeterObj.BranchList.ZoneEndsList.NumEnds;
    End;
  End;
end;
//------------------------------------------------------------------------------
function Meters_Get_Count():Integer;cdecl;
begin
     If Assigned(ActiveCircuit[ActiveActor]) Then
       Result := ActiveCircuit[ActiveActor].EnergyMeters.ListSize;
end;
//------------------------------------------------------------------------------
PROCEDURE Meters_Get_AllBranchesInZone(var ResultPtr: PPAnsiChar; ResultCount: PInteger);cdecl;
VAR
  Result: PPAnsiCharArray;
  pMeterObj   :TEnergyMeterObj;
  k           :Integer;
  BranchCount :Integer;
  pElem       :TDSSCktElement;
Begin
  Result := DSS_RecreateArray_PPAnsiChar(ResultPtr, ResultCount, (0) + 1);
  IF ActiveCircuit[ActiveActor] <> Nil THEN WITH ActiveCircuit[ActiveActor] DO Begin
    pMeterObj := EnergyMeters.Active;
    if pMeterObj <> Nil then begin
      // Get count of branches
      BranchCount := Meters_Get_CountBranches;
      If BranchCount > 0 Then Begin
          DSS_RecreateArray_PPAnsiChar(Result, ResultPtr, ResultCount, (BranchCount-1) + 1);
          pElem := pMeterObj.BranchList.First;
          k := 0;
          while pElem <> Nil do   Begin
             Result[k] := DSS_CopyStringAsPChar(Format ('%s.%s', [pElem.ParentClass.Name, pElem.Name]));
             inc(k);
             pElem := pMeterObj.BranchList.GoForward;
          End;
      End;
    end;
  End;

end;
PROCEDURE Meters_Get_AllBranchesInZone_GR();cdecl;
// Same as Meters_Get_AllBranchesInZone but uses global result (GR) pointers
begin
   Meters_Get_AllBranchesInZone(GR_DataPtr_PPAnsiChar, GR_CountPtr_PPAnsiChar)
end;

//------------------------------------------------------------------------------
function Meters_Get_CountBranches():Integer;cdecl;
Var
  pMeterObj :TEnergyMeterObj;
  // pelem : TDSSCktElement;
Begin
  Result := 0;
  IF ActiveCircuit[ActiveActor] <> Nil THEN WITH ActiveCircuit[ActiveActor] DO Begin
    pMeterObj := EnergyMeters.Active;
    if pMeterObj <> Nil then
    Result := pMeterObj.SequenceList.ListSize;

    (*
    If pMeterObj.BranchList <> Nil then Begin
      // Get count of branches
      pElem := pMeterObj.BranchList.First;
      while pElem <> Nil do   Begin
         inc(Result);
         pElem := pMeterObj.BranchList.GoForward;
      End;
    end;
    *)

  End;
end;
//------------------------------------------------------------------------------
function Meters_Get_SAIFI():Double;cdecl;
Var
  pMeterObj :TEnergyMeterObj;

begin
     Result := 0.0;
     If Assigned(ActiveCircuit[ActiveActor]) Then With ActiveCircuit[ActiveActor] Do
     Begin
         pMeterObj := TEnergyMeterObj(EnergyMeters.Active);
         If pMeterObj <> Nil Then Begin

             Result := pMeterObj.SAIFI;

         End;
     End;
end;
//------------------------------------------------------------------------------
function Meters_Get_SequenceIndex():Integer;cdecl;
Var
  pMeterObj :TEnergyMeterObj;

begin
     Result := 0;
     If Assigned(ActiveCircuit[ActiveActor]) Then With ActiveCircuit[ActiveActor] Do
     Begin
         pMeterObj := TEnergyMeterObj(EnergyMeters.Active);
         If pMeterObj <> Nil Then Begin
             Result := pMeterObj.SequenceList.ActiveIndex;
         End;
     End;
end;
//------------------------------------------------------------------------------
procedure Meters_Set_SequenceIndex(Value: Integer);cdecl;
Var
  pMeterObj :TEnergyMeterObj;

begin
     If Assigned(ActiveCircuit[ActiveActor]) Then With ActiveCircuit[ActiveActor] Do
     Begin
         pMeterObj := TEnergyMeterObj(EnergyMeters.Active);
         If pMeterObj <> Nil Then With pMeterObj Do
         Begin
             If (Value>0) and (Value<=SequenceList.ListSize) Then
                      ActiveCktElement := SequenceList.Get(Value)
             Else
                DoSimpleMsg(Format('Invalid index for SequenceList: %d. List size is %d.',[Value, SequenceList.ListSize]), 500501);
         End;
     End;
end;
//------------------------------------------------------------------------------
function Meters_Get_SAIFIKW():Double;cdecl;
Var
  pMeterObj :TEnergyMeterObj;

begin
     Result := 0.0;
     If Assigned(ActiveCircuit[ActiveActor]) Then With ActiveCircuit[ActiveActor] Do
     Begin
         pMeterObj := TEnergyMeterObj(EnergyMeters.Active);
         If pMeterObj <> Nil Then Begin

             Result := pMeterObj.SAIFIkW;

         End;
     End;
end;
//------------------------------------------------------------------------------
procedure Meters_DoReliabilityCalc(AssumeRestoration: WordBool);cdecl;
Var
  pMeterObj :TEnergyMeterObj;

begin
     If Assigned(ActiveCircuit[ActiveActor]) Then With ActiveCircuit[ActiveActor] Do
     Begin
         pMeterObj := TEnergyMeterObj(EnergyMeters.Active);
         If pMeterObj <> Nil Then Begin

                pMeterObj.CalcReliabilityIndices(AssumeRestoration);

         End;
     End;
end;
//------------------------------------------------------------------------------
function Meters_Get_SeqListSize():Integer;cdecl;
Var
  pMeterObj :TEnergyMeterObj;

begin
     Result := 0;
     If Assigned(ActiveCircuit[ActiveActor]) Then With ActiveCircuit[ActiveActor] Do
     Begin
         pMeterObj := TEnergyMeterObj(EnergyMeters.Active);
         If pMeterObj <> Nil Then Begin
             Result := pMeterObj.SequenceList.ListSize ;
         End;
     End;
end;
//------------------------------------------------------------------------------
function Meters_Get_TotalCustomers():Integer;cdecl;
Var
  pMeterObj :TEnergyMeterObj;
  PD_Element   :TPDElement;

begin
     Result := 0;
     If Assigned(ActiveCircuit[ActiveActor]) Then With ActiveCircuit[ActiveActor] Do
     Begin
         pMeterObj := TEnergyMeterObj(EnergyMeters.Active);
         If pMeterObj <> Nil Then Begin
             PD_Element := pMeterObj.SequenceList.Get(1) ;
             If Assigned (PD_Element) Then With PD_Element Do
                 Result := Buses^[Terminals^[FromTerminal].BusRef].BusTotalNumCustomers;
         End;
     End;
end;
//------------------------------------------------------------------------------
function Meters_Get_SAIDI():Double;cdecl;
Var
  pMeterObj :TEnergyMeterObj;

begin
     Result := 0.0;
     If Assigned(ActiveCircuit[ActiveActor]) Then With ActiveCircuit[ActiveActor] Do
     Begin
         pMeterObj := TEnergyMeterObj(EnergyMeters.Active);
         If pMeterObj <> Nil Then Begin
             Result := pMeterObj.SAIDI;
         End;
     End;
end;
//------------------------------------------------------------------------------
function Meters_Get_CustInterrupts():Double;cdecl;
Var
  pMeterObj :TEnergyMeterObj;

begin
     Result := 0.0;
     If Assigned(ActiveCircuit[ActiveActor]) Then With ActiveCircuit[ActiveActor] Do
     Begin
         pMeterObj := TEnergyMeterObj(EnergyMeters.Active);
         If pMeterObj <> Nil Then Begin
             Result := pMeterObj.CustInterrupts;
         End;
     End;
end;
//------------------------------------------------------------------------------
function Meters_Get_NumSections():Integer;cdecl;
Var
  pMeterObj :TEnergyMeterObj;
begin
     Result := 0;
     If Assigned(ActiveCircuit[ActiveActor]) Then With ActiveCircuit[ActiveActor] Do
     Begin
         pMeterObj := TEnergyMeterObj(EnergyMeters.Active);
         If pMeterObj <> Nil Then Begin
             Result := pMeterObj.SectionCount ;
         End;
     End;
end;
//------------------------------------------------------------------------------
procedure Meters_SetActiveSection(SectIdx: Integer);cdecl;
Var
  pMeterObj :TEnergyMeterObj;
begin
     If Assigned(ActiveCircuit[ActiveActor]) Then With ActiveCircuit[ActiveActor] Do
     Begin
         pMeterObj := TEnergyMeterObj(EnergyMeters.Active);
         If pMeterObj <> Nil Then Begin
             If (SectIdx > 0) and (SectIdx <= pMeterObj.SectionCount) Then
                pMeterObj.ActiveSection := SectIdx
             Else pMeterObj.ActiveSection := 0;
         End;
     End;

end;
//------------------------------------------------------------------------------
function Meters_Get_AvgRepairTime():Double;cdecl;
Var
  pMeterObj :TEnergyMeterObj;
begin
     Result := 0.0;
     If Assigned(ActiveCircuit[ActiveActor]) Then With ActiveCircuit[ActiveActor] Do
     Begin
         pMeterObj := TEnergyMeterObj(EnergyMeters.Active);
         If pMeterObj <> Nil Then With pMeterObj Do Begin
             If ActiveSection>0 then Result := FeederSections^[ActiveSection].AverageRepairTime ;
         End;
     End;
end;
//------------------------------------------------------------------------------
function Meters_Get_FaultRateXRepairHrs():Double;cdecl;
Var
  pMeterObj :TEnergyMeterObj;
begin
     Result := 0.0;
     If Assigned(ActiveCircuit[ActiveActor]) Then With ActiveCircuit[ActiveActor] Do
     Begin
         pMeterObj := TEnergyMeterObj(EnergyMeters.Active);
         If pMeterObj <> Nil Then With pMeterObj Do Begin
             If ActiveSection>0 then Result := FeederSections^[ActiveSection].SumFltRatesXRepairHrs  ;
         End;
     End;
end;
//------------------------------------------------------------------------------
function Meters_Get_NumSectionBranches():Integer;cdecl;
Var
  pMeterObj :TEnergyMeterObj;
begin
     Result := 0;
     If Assigned(ActiveCircuit[ActiveActor]) Then With ActiveCircuit[ActiveActor] Do
     Begin
         pMeterObj := TEnergyMeterObj(EnergyMeters.Active);
         If pMeterObj <> Nil Then With pMeterObj Do Begin
             If ActiveSection>0 then Result := FeederSections^[ActiveSection].NBranches  ;
         End;
     End;
end;
//------------------------------------------------------------------------------
function Meters_Get_NumSectionCustomers():Integer;cdecl;
Var
  pMeterObj :TEnergyMeterObj;
begin
     Result := 0;
     If Assigned(ActiveCircuit[ActiveActor]) Then With ActiveCircuit[ActiveActor] Do
     Begin
         pMeterObj := TEnergyMeterObj(EnergyMeters.Active);
         If pMeterObj <> Nil Then With pMeterObj Do Begin
             If ActiveSection>0 then Result := FeederSections^[ActiveSection].NCustomers   ;
         End;
     End;
end;
//------------------------------------------------------------------------------
function Meters_Get_OCPDeviceType():Integer;cdecl;
Var
  pMeterObj :TEnergyMeterObj;
begin
     Result := 0;
     If Assigned(ActiveCircuit[ActiveActor]) Then With ActiveCircuit[ActiveActor] Do
     Begin
         pMeterObj := TEnergyMeterObj(EnergyMeters.Active);
         If pMeterObj <> Nil Then With pMeterObj Do Begin
             If ActiveSection>0 then Result := FeederSections^[ActiveSection].OCPDeviceType ;
         End;
     End;
end;
//------------------------------------------------------------------------------
function Meters_Get_SumBranchFltRates():Double;cdecl;
Var
  pMeterObj :TEnergyMeterObj;
begin
     Result := 0.0;
     If Assigned(ActiveCircuit[ActiveActor]) Then With ActiveCircuit[ActiveActor] Do
     Begin
         pMeterObj := TEnergyMeterObj(EnergyMeters.Active);
         If pMeterObj <> Nil Then With pMeterObj Do Begin
             If ActiveSection>0 then Result := FeederSections^[ActiveSection].SumBranchFltRates ;
         End;
     End;
